Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-editing-services gst-editing-services
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 74
    • Issues 74
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 9
    • Merge requests 9
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-editing-servicesgst-editing-services
  • Issues
  • #35

Closed
Open
Created Feb 27, 2018 by Bugzilla Migration User@bugzilla-migration

Segfault when adding clip to group

Submitted by Alexandru Balut @aleb

Link to original bug (#793882)

Description

Run the script below, notice the segfault:

from gi.repository import Gst  
Gst.init(None)  
  
from gi.repository import GES  
GES.init()  
  
group = GES.Group()  
clip = GES.TitleClip()  
group.add(clip)  

.. because the clip has not been added to a layer.

It should not segfault.

Assignee
Assign to
Time tracking